--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.59.19",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
