--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.18]
+        node-version: [18.x]
 
     steps:
       - name: Checkout code
@@ -38,32 +38,6 @@ jobs:
 
       - name: Build project
         run: npm run build
-
-  lint:
-    runs-on: ubuntu-latest
-
-    needs: build
-
-    strategy:
-      matrix:
-        node-version: [18.18]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }},
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
 
       - name: Run Lint
         run: npm run lint
