--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,9 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+      - name: Save Build Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
+          path: ./dist
