chore(cd): list artifacts

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: List available artifacts
+        run: ls -R .
+
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
